@@ -43,12 +43,19 @@
  
     <build>
         <plugins>
+        
+        
           
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
+        <forkCount>3</forkCount>
+        <reuseForks>true</reuseForks>
+        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+        <skipTests>false</skipTests>
+        <forkMode>once</forkMode>
         <testFailureIgnore>true</testFailureIgnore>
     </configuration>
     </plugin>
